add os args
